# pgdci-photonics

./: .gitignore  CONFIGURATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.txt  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  verify_setup.py
scripts/: run_baselines.py  run_eval_all.py  run_ou.py  run_sample_pgcdi.py  run_train_pgcdi.py
src/obt1000/: baselines.py  config.py  eval_metrics.py  io_prep.py  ou_kalman.py  plotting.py
src/pgcdi/: data.py  model.py  physics_losses.py  sample.py  scheduler.py  train.py
