[project]
name = "optical-bead-trajectory-1000fps"
version = "0.1.0"
description = "Physics-aware upsampling of optical tweezer trajectories from 300 fps to 1000 fps"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26", "scipy>=1.11", "pandas>=2.2",
  "matplotlib>=3.8", "pyyaml>=6.0", "tqdm>=4.66", "torch>=2.2"
]

[tool.setuptools.packages.find]
where = ["src"]
